add publishing directive to build.gradle for jitpack

--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,11 @@ shadowJar {
 artifacts {
   archives shadowJar
 }
+
+publishing {
+  publications {
+    maven(MavenPublication) {
+      from components.java
+    }
+  }
+}
