--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: McDbDriver
-version: 0.0.1
-api-version: 1.19
+version: 0.0.2
+api-version: 1.20
 description: Thread pool provider for Spigot
-main: com.github.calebpower.mcdb.McDbDriver
+main: com.github.calebpower.mc.mcdb.McDbDriver
