--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: McDbDriver
 version: 0.0.2
 api-version: 1.20
 description: Thread pool provider for Spigot
-main: com.github.calebpower.mc.mcdb.McDbDriver
+main: com.calebpower.mc.mcdb.McDbDriver
