put api-version in quotes to combat implicit string casts in plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: McDbDriver
-version: 0.0.2
-api-version: 1.20
+version: 0.0.4
+api-version: '1.20'
 description: Thread pool provider for Spigot
 main: com.calebpower.mc.mcdb.McDbDriver
